[package]
name = "oura-cli"
version = "0.1.0"
edition = "2024"
description = "Unofficial CLI for Oura Ring — sleep, readiness, and activity scores from your terminal."
license = "MIT"
repository = "https://github.com/terry-li-hm/oura-cli"
homepage = "https://github.com/terry-li-hm/oura-cli"
keywords = ["oura", "health", "sleep", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "oura"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
